@@ -47,6 +47,7 @@ Please visit http://aegisub.net to download latest version
 - Flexibible audio cache names now allow you to have more than one copy of Aegisub open with audio loaded to HD cache. (AMZ)
 - Improved Splash Screen behavior to show up even if the program is frozen loading subtitles, and to center on the current display. (AMZ)
 - Added an "Import from script..." button to Styles Manager, to import styles directly from other subtitle files. (AMZ)
+- Added buttons to Styles Manager to move styles up, down, to top or to bottom, on both storage and current script. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
